# neural-network-playground

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/ml/: __init__.py  checkpoints.py  inference.py  model.py  train_mnist.py  training.py
backend/app/schemas/: socket.py
backend/tests/: test_model.py
docs/: architecture.md  roadmap.md  websocket-protocol.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/features/confidence/: ConfidencePanel.tsx
frontend/src/features/drawing/: DrawingCanvas.tsx
frontend/src/features/inspector/: InspectorPanel.tsx
frontend/src/features/network-visualizer/: NetworkVisualizer.tsx  useCanvasPulses.ts
frontend/src/features/preprocessing/: PreprocessingPipeline.tsx
frontend/src/lib/: preprocess.ts  socketClient.ts
frontend/src/stores/: useAppStore.ts
frontend/src/styles/: global.css
frontend/src/types/: network.ts  socket.ts
models/checkpoints/: digit_mlp.pt
models/manifests/: digit_mlp_manifest.json
scripts/: smoke_ws.py
