[project]
name = "neural-network-playground-backend"
version = "0.1.0"
description = "FastAPI and PyTorch backend for Neural Network Playground"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "numpy>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
